--- a/bio.html
+++ b/bio.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" src="js/arrow78.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
 
+</head>
+
 <body id="page-top" class="index">
 
     <!-- Navigation -->
@@ -169,3 +171,10 @@
 </body>
 
 </html>
+
+<style>
+    .navbar-default .navbar-nav>li>a {
+        font-size: 15px;
+        font-weight: bold;
+    }
+</style>
