--- a/bio.html
+++ b/bio.html
@@ -79,10 +79,17 @@
                         <a onclick="javascript:reset_menus();$('#tab-courses-content').show();"
                             href="index.html#courses">Courses</a>
                     </li>
+
+                    <li class="page-scroll">
+                        <a onclick="javascript:reset_menus();$('#tab-service-content').show();"
+                            href="index.html#sponsor"><b>Sponsor</b></a>
+                    </li>
+
                     <li class="page-scroll">
                         <a onclick="javascript:reset_menus();$('#tab-service-content').show();"
                             href="index.html#service">Student Service</a>
                     </li>
+
                     <!-- <li class="page-scroll">
                                 <a onclick="javascript:reset_menus();$('#tab-service-content').show();" 
                                 href="#service">Awards</a>
@@ -157,7 +164,7 @@
     <footer>
         <small>
             <center>
-                © 2016 | D. Paranjothi. Credits: AR template
+                © 2016 | D. Paranjothi. Credits: Oklahoma State University
                 <a onclick="javascript:$('#credit').toggle();"><img border="0" src="images/ccby.png" /></a>
                 <div style="display:none;" id="credit">[AR template available under Creative Commons CC BY 4.0 licence:
                     <a href="https://github.com/dmsl/academic-responsive-template" target="_blank">
